app.modules actualizado con el modulo dbz

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1> Hola mundo</h1>
+<!-- <h1> Hola mundo</h1>
 
 
 <app-counter> </app-counter>
@@ -13,5 +13,6 @@
 
 <hr>
 
-<h1> Fin </h1>
+<h1> Fin </h1> -->
 
+<app-dbz-main-page></app-dbz-main-page>
